# talrost

./: Cargo.toml  README.md
examples/: demo.rs
src/: algebra.rs  complex.rs  display.rs  element.rs  float.rs  integer.rs  lib.rs  matrix.rs  natural.rs  number.rs  polynomial.rs  solvers.rs  vector.rs
src/solvers/: blinn.rs  yuksel.rs
